--- a/config/app.json
+++ b/config/app.json
@@ -1,7 +1,7 @@
 {
-    "run_mode": "develepment",
     "app": {
-        "jwt_secret": "123"
+        "jwt_secret": "123",
+        "run_mode": "debug"
     },
     "server": {
         "http_port": 8000,
@@ -11,7 +11,7 @@
     "database": {
         "type": "mysql",
         "user": "root",
-        "password": "",
+        "password": "123456",
         "host": "127.0.0.1:3306",
         "database": "markman"
     }
