fix: docker build env

--- a/deploy/autobuild/Dockerfile
+++ b/deploy/autobuild/Dockerfile
@@ -1,16 +1,14 @@
 # 使用最新版本的 golang 官方镜像作为构建阶段的基础镜像
-FROM golang:1.22 AS builder
+FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 COPY . .
-RUN ls -lh
 RUN go mod download
-RUN go get .
-RUN go build -o markman-server .
+RUN go build -o markman .
 
 FROM alpine:latest
-RUN mkdir /workspace/runtime/log -p
 WORKDIR /workspace
-COPY --from=builder /app/markman-server markman
+RUN mkdir /workspace/runtime/log -p
+COPY --from=builder /app/markman /workspace/markman
 
-ENTRYPOINT [ "/workspace/markman" ]
+ENTRYPOINT [ "./markman" ]
